Add text to HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>War Card Game</title>
 </head>
 <body>
+	<h1>This is War</h1>
+	<p>See the console to play a <strong>War</strong> card game</p>
 	<div id="app"></div>
 
 	<script src="/js/script.js"></script>
