--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>War Card Game</title>
-</head>
-<body>
-	<h1>This is War</h1>
-	<p>See the console to play a <strong>War</strong> card game</p>
-	<div id="app"></div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>War Card Game</title>
+	</head>
+	<body>
+		<h1>This is War</h1>
+		<p>See the console to play a <strong>War</strong> card game</p>
+		<div id="app"></div>
 
-	<script src="/js/script.js"></script>
-</body>
+		<script src="/js/script.js"></script>
+	</body>
 </html>
