Fix script tag src

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 		<p>See the console to play a <strong>War</strong> card game</p>
 		<div id="app"></div>
 
-		<script src="/js/script.js"></script>
+		<script src="js/script.js"></script>
 	</body>
 </html>
