--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>War Card Game</title>
+		<!-- Prevent 404 favicon error -->
+		<link rel="shortcut icon" href="#" />
 	</head>
 	<body>
 		<h1>This is War</h1>
