Add img, cite img, include directions to access the console

--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
 	</head>
 	<body>
 		<h1>This is War</h1>
-		<p>See the console to play a <strong>War</strong> card game</p>
-		<div id="app"></div>
-
+		<img
+			src="Horatio-Nelson-achievement-sepia-Battle-of-Trafalgar-1806.jpg"
+			alt="Armorial achievement of Admiral Horatio Nelson, hero of the Battle of Trafalgar, drawn in sepia, 1806."
+			width="300"
+		/>
+		<p>Open the console to play a <strong>War</strong> card game</p>
+		<ul>
+			<li>Mac: ⌥ ⌘ k</li>
+			<li>Win: ctrl shift k</li>
+		</ul>
 		<script src="js/script.js"></script>
 	</body>
 </html>
+
+<!-- Image: Encyclopædia Britannica. Armorial achievement of Admiral Horatio Nelson, hero of the Battle of Trafalgar,
+drawn in sepia, 1806. Courtesy of the National Maritime Museum, London;
+photograph, Patrick Rossmore. https://www.britannica.com/biography/Horatio-Nelson/images-videos#/media/1/408359/1863-->
