--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<ul>
 			<li>Mac: ⌥ ⌘ k</li>
 			<li>Win: ctrl shift k</li>
+			<li>Type playAgain() to restart a battle</li>
 		</ul>
 		<script src="js/script.js"></script>
 	</body>
