Add h2 Game Play and Links plus content

--- a/index.html
+++ b/index.html
@@ -15,11 +15,24 @@
 			alt="Armorial achievement of Admiral Horatio Nelson, hero of the Battle of Trafalgar, drawn in sepia, 1806."
 			width="300"
 		/>
+		<h2>Game Play</h2>
 		<p>Open the console to play a <strong>War</strong> card game</p>
 		<ul>
-			<li>Mac: ⌥ ⌘ k</li>
-			<li>Win: ctrl shift k</li>
-			<li>Type playAgain() to restart a battle</li>
+			<li>Mac: ⌥ ⌘ i</li>
+			<li>Win: ctrl shift i</li>
+			<li>Type playAgain() to start a new battle</li>
+		</ul>
+		<h2>Links</h2>
+		<ul>
+			<li>
+				Repo: <a href="https://github.com/ThwCorbin/war-game">War Card Game</a>
+			</li>
+			<li>
+				Website:
+				<a href="https://www.thwcorbin.com/" title="Tom's Two-up Two-down"
+					>Tom's Two-up Two-down</a
+				>
+			</li>
 		</ul>
 		<script src="js/script.js"></script>
 	</body>
