Add title to anchor

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 		<h2>Links</h2>
 		<ul>
 			<li>
-				Repo: <a href="https://github.com/ThwCorbin/war-game">War Card Game</a>
+				Repo:
+				<a
+					href="https://github.com/ThwCorbin/war-game"
+					title="War card game repository on GitHub"
+					>War Card Game</a
+				>
 			</li>
 			<li>
 				Website:
