--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				>
 			</li>
 			<li>
-				My Website:
+				myWebsite:
 				<a href="https://www.thwcorbin.com/" title="Tom's Two-up Two-down"
 					>Tom's Two-up Two-down</a
 				>
