Add background story

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 			alt="Armorial achievement of Admiral Horatio Nelson, hero of the Battle of Trafalgar, drawn in sepia, 1806."
 			width="300"
 		/>
+
+		<p>
+			Admiral Horatio Nelson and Admiral Pierre<br />
+			Villeneuve fight the Battle of Trafalgar using<br />
+			the children's card game War to determine the<br />
+			winner of the naval engagement. Unlike their<br />
+			1805 battle, Admiral Villeneuve has a fighting<br />
+			chance with cards. Will Admiral Nelson on<br />
+			his flagship HMS Victory destroy Admiral<br />
+			Villeneuve's French and Spanish fleet?
+		</p>
+
 		<h2>Game Play</h2>
 		<p>Open the console to play a <strong>War</strong> card game</p>
 		<ul>
